--- a/.editorconfig
+++ b/.editorconfig
@@ -49,9 +49,11 @@ dotnet_style_qualification_for_event = false:suggestion
 
 # avoid unused usings
 dotnet_diagnostic.IDE0005.severity = error
+# Seal internal types
+dotnet_diagnostic.CA1852.severity = error
 
 # Types: use var
-csharp_style_var_for_built_in_types = true:suggestion
+csharp_style_var_for_built_in_types = true:warning
 csharp_style_var_when_type_is_apparent = false:none
 csharp_style_var_elsewhere = true:suggestion
 dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
@@ -65,15 +67,6 @@ dotnet_naming_symbols.constant_fields.applicable_kinds   = field
 dotnet_naming_symbols.constant_fields.required_modifiers = const
 dotnet_naming_style.pascal_case_style.capitalization = pascal_case
 
-# static fields should have s_ prefix
-dotnet_naming_rule.static_fields_should_have_prefix.severity = suggestion
-dotnet_naming_rule.static_fields_should_have_prefix.symbols  = static_fields
-dotnet_naming_rule.static_fields_should_have_prefix.style    = static_prefix_style
-dotnet_naming_symbols.static_fields.applicable_kinds   = field
-dotnet_naming_symbols.static_fields.required_modifiers = static
-dotnet_naming_symbols.static_fields.applicable_accessibilities = private, internal, private_protected
-dotnet_naming_style.static_prefix_style.required_prefix = s_
-dotnet_naming_style.static_prefix_style.capitalization = camel_case
 
 # internal and private fields should be _camelCase
 dotnet_naming_rule.camel_case_for_private_internal_fields.severity = suggestion
@@ -132,6 +125,9 @@ csharp_style_conditional_delegate_call = true:suggestion
 csharp_style_prefer_index_operator = false:none
 csharp_style_prefer_range_operator = false:none
 csharp_style_pattern_local_over_anonymous_function = false:none
+
+# Convert to file-scoped namespace
+csharp_style_namespace_declarations = file_scoped:error
 
 # Space preferences
 csharp_space_after_cast = false
