--- a/src/MentorSync.UI/package.json
+++ b/src/MentorSync.UI/package.json
@@ -14,6 +14,7 @@
         "@tailwindcss/vite": "^4.1.8",
         "@types/marked": "^5.0.2",
         "@types/node": "^22.15.29",
+        "@types/react-time-picker": "^4.0.3",
         "axios": "^1.9.0",
         "jwt-decode": "^4.0.0",
         "marked": "^15.0.12",
@@ -21,6 +22,7 @@
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.56.4",
         "react-router-dom": "^7.6.1",
+        "react-time-picker": "^7.0.0",
         "react-toastify": "^11.0.5"
     },
     "devDependencies": {
