--- a/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
+++ b/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Sdk Name="Aspire.AppHost.Sdk" Version="9.3.0" />
 
@@ -12,12 +12,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.0" />
-        <PackageReference Include="Aspire.Hosting.Azure" Version="9.3.0" />
-        <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.3.0" />
-        <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.3.0" />
-        <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.3.0" />
-        <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.3.0" />
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.1" />
+        <PackageReference Include="Aspire.Hosting.Azure" Version="9.3.1" />
+        <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.3.1" />
+        <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.3.1" />
+        <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.3.1" />
+        <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.3.1" />
         <PackageReference Include="CommunityToolkit.Aspire.Hosting.NodeJS.Extensions" Version="9.5.0" />
     </ItemGroup>
 
