--- a/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
+++ b/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
@@ -8,9 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.3.0" />
+        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.3.1" />
         <PackageReference Include="Bogus" Version="35.6.3" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.0" />
         <PackageReference Include="OpenTelemetry.Api" Version="1.12.0" />
     </ItemGroup>
 
