--- a/src/Modules/Notifications/MentorSync.Notifications/MentorSync.Notifications.csproj
+++ b/src/Modules/Notifications/MentorSync.Notifications/MentorSync.Notifications.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Aspire.MongoDB.Driver.v3" Version="9.3.0" />
+    <PackageReference Include="Aspire.MongoDB.Driver.v3" Version="9.3.1" />
     <PackageReference Include="Azure.Communication.Email" Version="1.1.0-beta.2" />
   </ItemGroup>
   <ItemGroup>
