--- a/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
+++ b/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Sdk Name="Aspire.AppHost.Sdk" Version="9.3.1" />
+    <Sdk Name="Aspire.AppHost.Sdk" Version="9.4" />
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -9,14 +9,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.1" />
-        <PackageReference Include="Aspire.Hosting.Azure" Version="9.3.2" />
-        <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.3.1" />
-        <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.3.1" />
-        <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.3.1" />
-        <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.3.1" />
-        <PackageReference Include="CommunityToolkit.Aspire.Hosting.NodeJS.Extensions" Version="9.6.0" />
-        <PackageReference Include="System.Text.Json" Version="9.0.7" />
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.4.0" />
+        <PackageReference Include="Aspire.Hosting.Azure" Version="9.4.0" />
+        <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.4.0" />
+        <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.4.0" />
+        <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.4.0" />
+        <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.4.0" />
+        <PackageReference Include="CommunityToolkit.Aspire.Hosting.NodeJS.Extensions" Version="9.7.0" />
+        <PackageReference Include="System.Text.Json" Version="9.0.8" />
     </ItemGroup>
 
     <ItemGroup>
@@ -26,9 +26,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Update="Meziantou.Analyzer" Version="2.0.210" />
       <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" />
-      <PackageReference Update="Roslynator.Analyzers" Version="4.13.1" />
-      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.14.0.120626" />
+      <PackageReference Update="Roslynator.Analyzers" Version="4.14.0" />
+      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
     </ItemGroup>
 
 </Project>
