--- a/aspire/MentorSync.ServiceDefaults/MentorSync.ServiceDefaults.csproj
+++ b/aspire/MentorSync.ServiceDefaults/MentorSync.ServiceDefaults.csproj
@@ -11,7 +11,7 @@
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
 
         <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.7.0" />
-        <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.3.1" />
+        <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.4.0" />
         <PackageReference Include="Npgsql.OpenTelemetry" Version="9.0.3" />
         <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0" />
         <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
@@ -20,7 +20,7 @@
         <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.11.0-beta.2" />
         <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
         <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0" />
-        <PackageReference Include="System.Text.Json" Version="9.0.7" />
+        <PackageReference Include="System.Text.Json" Version="9.0.8" />
     </ItemGroup>
 
     <ItemGroup>
@@ -28,9 +28,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Update="Meziantou.Analyzer" Version="2.0.210" />
       <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" />
-      <PackageReference Update="Roslynator.Analyzers" Version="4.13.1" />
-      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.14.0.120626" />
+      <PackageReference Update="Roslynator.Analyzers" Version="4.14.0" />
+      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
     </ItemGroup>
 
 </Project>
