--- a/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
+++ b/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
@@ -8,12 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.3.1" />
+        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.0" />
         <PackageReference Include="Bogus" Version="35.6.3" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
-        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.1" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.13.0" />
         <PackageReference Include="OpenTelemetry.Api" Version="1.12.0" />
-        <PackageReference Include="System.Text.Json" Version="9.0.7" />
+        <PackageReference Include="System.Text.Json" Version="9.0.8" />
     </ItemGroup>
 
     <ItemGroup>
@@ -26,8 +26,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Update="Meziantou.Analyzer" Version="2.0.210" />
       <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" />
-      <PackageReference Update="Roslynator.Analyzers" Version="4.13.1" />
-      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.14.0.120626" />
+      <PackageReference Update="Roslynator.Analyzers" Version="4.14.0" />
+      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
     </ItemGroup>
 </Project>
