--- a/src/Modules/Notifications/MentorSync.Notifications.Contracts/MentorSync.Notifications.Contracts.csproj
+++ b/src/Modules/Notifications/MentorSync.Notifications.Contracts/MentorSync.Notifications.Contracts.csproj
@@ -11,9 +11,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Update="Meziantou.Analyzer" Version="2.0.210" />
       <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" />
-      <PackageReference Update="Roslynator.Analyzers" Version="4.13.1" />
-      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.14.0.120626" />
+      <PackageReference Update="Roslynator.Analyzers" Version="4.14.0" />
+      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
     </ItemGroup>
 
 </Project>
