--- a/src/Modules/Notifications/MentorSync.Notifications/MentorSync.Notifications.csproj
+++ b/src/Modules/Notifications/MentorSync.Notifications/MentorSync.Notifications.csproj
@@ -5,7 +5,7 @@
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Aspire.MongoDB.Driver.v3" Version="9.3.1" />
+    <PackageReference Include="Aspire.MongoDB.Driver.v3" Version="9.4.0" />
     <PackageReference Include="Azure.Communication.Email" Version="1.1.0-beta.2" />
   </ItemGroup>
   <ItemGroup>
@@ -13,8 +13,9 @@
     <ProjectReference Include="..\..\Users\MentorSync.Users.Contracts\MentorSync.Users.Contracts.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Update="Meziantou.Analyzer" Version="2.0.210" />
     <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" />
-    <PackageReference Update="Roslynator.Analyzers" Version="4.13.1" />
-    <PackageReference Update="SonarAnalyzer.CSharp" Version="10.14.0.120626" />
+    <PackageReference Update="Roslynator.Analyzers" Version="4.14.0" />
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
   </ItemGroup>
 </Project>
