--- a/aspire/MentorSync.AppHost/infra/api.tmpl.yaml
+++ b/aspire/MentorSync.AppHost/infra/api.tmpl.yaml
@@ -1,62 +1,63 @@
 api-version: 2024-02-02-preview
-location: {{ .Env.AZURE_LOCATION }}
+location: { { .Env.AZURE_LOCATION } }
 identity:
-  type: UserAssigned
-  userAssignedIdentities:
-    ? "{{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}"
-    : {}
+    type: UserAssigned
+    userAssignedIdentities:
+        "{{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}": {}
 properties:
-  environmentId: {{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_ID }}
-  configuration:
-    activeRevisionsMode: single
-    runtime:
-      dotnet:
-        autoConfigureDataProtection: true
-    ingress:
-      external: true
-      targetPort: {{ targetPortOrDefault 8080 }}
-      transport: http
-      allowInsecure: false
-    registries:
-      - server: {{ .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT }}
-        identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
-    secrets:
-      - name: connectionstrings--emailservice
-        value: endpoint=https://cs-mentorsync-dev.unitedstates.communication.azure.com/;accesskey=A6Uh5park7JXtTKo5MifjUgJkgbn2Mc1G9jDqShflfr10kjIkG4EJQQJ99BDACULyCpqbLGRAAAAAZCS0yGB
-      - name: connectionstrings--files-blobs
-        value: '{{ .Env.MENTOR_SYNC_STORAGE_BLOBENDPOINT }}'
-      - name: connectionstrings--mongodb
-        value: mongodb://{{ securedParameter "mongo_username" }}:{{ securedParameter "mongo_password" }}@mongo:27017/mongodb?authSource=admin&authMechanism=SCRAM-SHA-256
-      - name: connectionstrings--mentorsyncdb
-        keyVaultUrl: '{{ .Env.POSTGRES_DB_KV_VAULTURI }}secrets/connectionstrings--MentorSyncDb'
-        identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
-  template:
-    containers:
-      - image: {{ .Image }}
-        name: api
-        env:
-          - name: AZURE_CLIENT_ID
-            value: {{ .Env.MANAGED_IDENTITY_CLIENT_ID }}
-          - name: ASPNETCORE_FORWARDEDHEADERS_ENABLED
-            value: "true"
-          - name: HTTP_PORTS
-            value: '{{ targetPortOrDefault 0 }}'
-          - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES
-            value: "true"
-          - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES
-            value: "true"
-          - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY
-            value: in_memory
-          - name: ConnectionStrings__EmailService
-            secretRef: connectionstrings--emailservice
-          - name: ConnectionStrings__files-blobs
-            secretRef: connectionstrings--files-blobs
-          - name: ConnectionStrings__mongodb
-            secretRef: connectionstrings--mongodb
-          - name: ConnectionStrings__MentorSyncDb
-            secretRef: connectionstrings--mentorsyncdb
-    scale:
-      minReplicas: 1
+    environmentId: { { .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_ID } }
+    configuration:
+        activeRevisionsMode: single
+        runtime:
+            dotnet:
+                autoConfigureDataProtection: true
+        ingress:
+            external: true
+            targetPort: { { targetPortOrDefault 8080 } }
+            transport: http
+            allowInsecure: false
+        registries:
+            - server: { { .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT } }
+              identity: { { .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID } }
+        secrets:
+            - name: connectionstrings--emailservice
+              value: endpoint=https://cs-mentorsync-dev.unitedstates.communication.azure.com/;accesskey=A6Uh5park7JXtTKo5MifjUgJkgbn2Mc1G9jDqShflfr10kjIkG4EJQQJ99BDACULyCpqbLGRAAAAAZCS0yGB
+            - name: connectionstrings--files-blobs
+              value: "{{ .Env.MENTOR_SYNC_STORAGE_BLOBENDPOINT }}"
+            - name: connectionstrings--mongodb
+              value:
+                  mongodb://{{ securedParameter "mongo_username" }}:{{ securedParameter "mongo_password"
+                  }}@mongo:27017/mongodb?authSource=admin&authMechanism=SCRAM-SHA-256
+            - name: connectionstrings--mentorsyncdb
+              keyVaultUrl: "{{ .Env.POSTGRES_DB_KV_VAULTURI }}secrets/connectionstrings--MentorSyncDb"
+              identity: { { .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID } }
+    template:
+        containers:
+            - image: { { .Image } }
+              name: api
+              env:
+                  - name: AZURE_CLIENT_ID
+                    value: { { .Env.MANAGED_IDENTITY_CLIENT_ID } }
+                  - name: ASPNETCORE_FORWARDEDHEADERS_ENABLED
+                    value: "true"
+                  - name: HTTP_PORTS
+                    value: "{{ targetPortOrDefault 0 }}"
+                  - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES
+                    value: "true"
+                  - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES
+                    value: "true"
+                  - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY
+                    value: in_memory
+                  - name: ConnectionStrings__EmailService
+                    secretRef: connectionstrings--emailservice
+                  - name: ConnectionStrings__files-blobs
+                    secretRef: connectionstrings--files-blobs
+                  - name: ConnectionStrings__mongodb
+                    secretRef: connectionstrings--mongodb
+                  - name: ConnectionStrings__MentorSyncDb
+                    secretRef: connectionstrings--mentorsyncdb
+        scale:
+            minReplicas: 1
 tags:
-  azd-service-name: api
-  aspire-resource-name: api
+    azd-service-name: api
+    aspire-resource-name: api
