--- a/aspire/MentorSync.AppHost/infra/ui.tmpl.yaml
+++ b/aspire/MentorSync.AppHost/infra/ui.tmpl.yaml
@@ -1,46 +1,45 @@
 api-version: 2024-02-02-preview
-location: {{ .Env.AZURE_LOCATION }}
+location: { { .Env.AZURE_LOCATION } }
 identity:
-  type: UserAssigned
-  userAssignedIdentities:
-    ? "{{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}"
-    : {}
+    type: UserAssigned
+    userAssignedIdentities:
+        "{{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}": {}
 properties:
-  environmentId: {{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_ID }}
-  configuration:
-    activeRevisionsMode: single
-    runtime:
-      dotnet:
-        autoConfigureDataProtection: true
-    ingress:
-      external: true
-      targetPort: 8000
-      transport: http
-      allowInsecure: false
-    registries:
-      - server: {{ .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT }}
-        identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
-  template:
-    containers:
-      - image: {{ .Image }}
-        name: ui
-        env:
-          - name: AZURE_CLIENT_ID
-            value: {{ .Env.MANAGED_IDENTITY_CLIENT_ID }}
-          - name: BROWSER
-            value: none
-          - name: NODE_ENV
-            value: development
-          - name: VITE_API_URL
-            value: https://api.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}
-          - name: VITE_PORT
-            value: "8000"
-          - name: services__api__http__0
-            value: http://api.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}
-          - name: services__api__https__0
-            value: https://api.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}
-    scale:
-      minReplicas: 1
+    environmentId: { { .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_ID } }
+    configuration:
+        activeRevisionsMode: single
+        runtime:
+            dotnet:
+                autoConfigureDataProtection: true
+        ingress:
+            external: true
+            targetPort: 8000
+            transport: http
+            allowInsecure: false
+        registries:
+            - server: { { .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT } }
+              identity: { { .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID } }
+    template:
+        containers:
+            - image: { { .Image } }
+              name: ui
+              env:
+                  - name: AZURE_CLIENT_ID
+                    value: { { .Env.MANAGED_IDENTITY_CLIENT_ID } }
+                  - name: BROWSER
+                    value: none
+                  - name: NODE_ENV
+                    value: development
+                  - name: VITE_API_URL
+                    value: https://api.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}
+                  - name: VITE_PORT
+                    value: "8000"
+                  - name: services__api__http__0
+                    value: http://api.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}
+                  - name: services__api__https__0
+                    value: https://api.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}
+        scale:
+            minReplicas: 1
 tags:
-  azd-service-name: ui
-  aspire-resource-name: ui
+    azd-service-name: ui
+    aspire-resource-name: ui
